fix: tab gap

--- a/src/components/Tabber/Tabs/Tabs.module.scss
+++ b/src/components/Tabber/Tabs/Tabs.module.scss
@@ -56,7 +56,7 @@
 .tab {
   display: grid;
   grid-template-columns: minmax(min-content, max-content) auto;
-  gap: 0.5rem;
+  gap: 0.8rem;
 
   align-items: center;
 
